fixing up styles

--- a/starter-template/index.html
+++ b/starter-template/index.html
@@ -37,12 +37,15 @@
   </div>
 
   <!-- Second section -->
-  <div class="row">
+  <div class="row valign-wrapper second-row">
     <div class="col s6 play-vid center-align">
       <img src="assets/play-button.svg" alt="Play">
-      <p class="white-text plain-text">Play Video</p>
+      <p class="white-text plain-text center-align">Play Video</p>
     </div>
-    <h4 class="col s6 left-align bold-text">12 Handy Tips For Generating Leads Through Cold Calling</h4>
+    <h5 class="col s6 left-align bold-text">12 Handy Tips For </br> Generating Leads Through </br> Cold Calling</br>
+      <i class="material-icons">remove</i>
+
+    </h5>
   </div>
 
   <!--   About me and Facts Section -->
@@ -54,20 +57,18 @@
           <div class="col s12 m4 white info-section">
             <label for="About me " class="grey-light-text ">ABOUT ME</label>
             <h6>A few things to know</h6>
-            <p class="light left ">Suspendisse in justo eu magna luctus suscipit. Sed lectus. Integer euismod lacus luctus magna. Quisque cursus,
-              metus vitae pharetra auctor, sem massa mattis sem, at interdum magna augue eget diam. Vestibulum ante ipsum
-              primis in faucibus orci luctus et ultrices posuere cubilia Curae; Morbi lacinia molestie dui. Praesent blandit
-              dolor. Sed non quam. In vel mi sit amet augue congue elementum. Morbi in ipsum sit amet pede facilisis laoreet.
+            <p class="light left grey-text ">Suspendisse in justo eu magna luctus suscipit. Sed lectus. Integer euismod lacus luctus magna. Quisque cursus,
+              metus vitae pharetra auctor, sem massa mattis sem, at interdum magna augue eget diam. Vestibulum ante ipsum.
             </p>
-            <p class="light ">We did most of the heavy lifting for you to provide a default stylings that incorporate our custom components.
-              Additionally, we refined animations and transitions to provide a smoother experience for developers.</p>
+            <p class="light grey-text ">Quisque cursus, metus at interdum magna augue eget diam. Vestibulum ante ipsum.
+            </p>
           </div>
 
 
           <div class="col s12 m7 white info-section">
             <label class="grey-light-text ">FACTS</label>
             <h6 class=" ">What makes us so good</h6>
-            <p class="light left ">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent libero. Sed cursus ante dapibus
+            <p class="light left grey-text ">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent libero. Sed cursus ante dapibus
               diam. Sed nisi. Nulla quis sem at nibh elementum imperdiet.</p>
 
             <ul>
@@ -77,12 +78,12 @@
               </li>
               <li>
                 <i class="material-icons  grey-text">description</i>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit
+                Lorem consectetur adipiscing elit
               </li>
               <li>
                 <i class="material-icons  grey-text">chat_bubble_outline
                 </i>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit
+                Praesent libero. Sed cursus ante.
               </li>
             </ul>
           </div>
@@ -112,12 +113,14 @@
     </div>
 
     <!-- Sign Up section -->
-    <div class="row">
-      <div class="col m4 white-text sign-up left-area">
-        Sometimes you need to receive these things in your inbox for free!
+    <div class="row sign-up-row">
+      <div class="col m3 white-text sign-up left-area valign-wrapper">
+        Sometimes you need to </br> receive these things in</br> your inbox for free!
       </div>
-      <div class="col m8 center-align sign-up-cta right">
-        <h5 class="white-text col s12">Sign up to receive the latest updates</h5>
+      <div class="col m9 sign-up-cta left-align">
+        <h5 class="white-text bold-text ">Sign up to receive the latest updates </br>
+          <i class="material-icons white-text medium">remove</i>
+        </h5>
         <div class="enter-email">
           <input id="email" type="email" class="validate" placeholder="Email Address">
           <button class="sign-up white-text sign-up-btn">Sign Up</button>
@@ -128,32 +131,32 @@
 
     <!-- footer -->
     <footer class="page-footer">
-      <div class="container ">
-        <div class="row ">
-          <div class="col m2 s12 ">
-            <img src="assets/logo.png" class="white" alt="logo">
+      <div class="container">
+        <div class="row">
+          <div class="col m2 center-align">
+            <img src="assets/logo.svg" class="white-text" alt="logo">
           </div>
           <div class="col m3 s12 left">
-            <h5 class="white-text ">Sign Up</h5>
+            <h5 class="white-text bold-text ">Sign Up</h5>
             <ul>
               <li>
-                <a class="white-text " href="#! ">To receive the latest updates</a>
+                <a class="white-text plain-text" href="#! ">To receive the latest updates</a>
               </li>
             </ul>
           </div>
           <div class="col m3 s12 left">
-            <h5 class="white-text ">Our Process</h5>
+            <h5 class="white-text bold-text">Our Process</h5>
             <ul>
               <li>
-                <a class="white-text " href="#! ">Answers to your questions</a>
+                <a class="white-text plain-text" href="#! ">Answers to your questions</a>
               </li>
             </ul>
           </div>
           <div class="col m3 s12 ">
-            <h5 class="white-text ">Gallery</h5>
+            <h5 class="white-text bold-text">Gallery</h5>
             <ul>
               <li>
-                <a class="white-text " href="#! ">View photos and videos</a>
+                <a class="white-text plain-text" href="#! ">View photos and videos</a>
               </li>
             </ul>
           </div>
@@ -164,7 +167,9 @@
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel alias rem qui nam eius! Amet ducimus, totam dignissimos rem
           eius provident! Aut repellendus eos at magnam dolores pariatur illum id. Lorem ipsum dolor sit amet consectetur
           adipisicing elit. Sequi nulla deleniti eveniet enim quia ut fugiat repellat non id? Nostrum sed tenetur cum suscipit
-          dolore amet aperiam dolorum, atque delectus?
+          dolore amet aperiam dolorum, atque delectus.Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel alias
+          rem qui nam eius! Amet ducimus, totam dignissimos rem eius provident! Aut repellendus eos at magnam dolores pariatur
+          illum id. Lorem ipsum dolor sit amet consectetur.
         </div>
       </div>
     </footer>
